feat: use Pre component instead of pre, because pre is not overrided by @mdx-js/react

--- a/content/book/1/1.4.mdx
+++ b/content/book/1/1.4.mdx
@@ -44,13 +44,12 @@ metaDescription: "1.4. Обработка данных. Операции. Выр
 
 ## Действие и результат
 
-<pre>
-«Борьбу с пьянством прекратить,<br/>
-
-ибо это – не борьба, и это - не результат».<br/>
-<br/>
-Из миниатюр М.Жванецкого
-</pre>
+<Pre>
+  «Борьбу с пьянством прекратить,<br />
+  ибо это – не борьба, и это - не результат».
+  <br />
+  Из миниатюр М.Жванецкого
+</Pre>
 
 Обычно результат операции представляет собой новое, самостоятельное значение, которое затем может использоваться в качестве операнда в последующих операциях. Входные операнды при этом остаются без изменения. В Си схема может быть сложнее - операнды некоторых операций могут изменяться в процессе ее выполнения. Самый простой пример - операция присваивания:
 
