--- a/content/book/10/10.1.mdx
+++ b/content/book/10/10.1.mdx
@@ -6,10 +6,11 @@ metaDescription: "10.1. Объекты и классы"
 
 ## 10. «Эпизодическое» объектно-ориентированное программирование
 
-<pre>
-ООП – Организация Освобождения Палестины.<br/>
-<b>Аббревиатура.</b>
-</pre>
+<Pre>
+  ООП – Организация Освобождения Палестины.
+  <br />
+  <b>Аббревиатура.</b>
+</Pre>
 
 Резонный вопрос – почему так поздно приступаем к знакомству с ООП? Я тоже считаю, что некоторые главы книги только бы выиграли от их изложения в объектно-ориентированной нотации. Но, сказавши «а», следовало бы сказать и «б», т.е. пришлось бы полностью изложить принципы ООП, а это было бы не совсем правильно:
 
