--- a/content/book/10/10.3.mdx
+++ b/content/book/10/10.3.mdx
@@ -4,12 +4,12 @@ metaTitle: "10.3. Переопределение операций"
 metaDescription: "10.3. Переопределение операций"
 ---
 
-<pre>
-«Мы говорим Ленин – подразумеваем Партия,<br/>
-Мы говорим Партия – подразумеваем Ленин».<br/>
-<br/>
-<b>Владимир Маяковский.</b>
-</pre>
+<Pre>
+  «Мы говорим Ленин – подразумеваем Партия,<br />
+  Мы говорим Партия – подразумеваем Ленин».<br />
+  <br />
+  <b>Владимир Маяковский.</b>
+</Pre>
 
 Одна из целей «эпизодического» ООП – создание необходимых пользователю форм представления (типов данных) в виде классов. Естественное желание, сделать их неотличимыми до такой степени, чтобы с ними можно было работать как с обычными переменными базовых типов. **Переопределение операций** обеспечивает перепрограммирование операций таким образом, что в качестве операндов в них могут использоваться объекты интересующего нас типа.
 
