--- a/content/book/11/11.4.mdx
+++ b/content/book/11/11.4.mdx
@@ -6,15 +6,12 @@ metaDescription: "11.4. Полиморфизм"
 
 11.4. Полиморфизм. Виртуальные функции
 
-<pre>
-«Мадмуазель Собак слыла культурной девушкой:
-в ее словаре было около ста восьмидесяти слов.
-При этом ей было известно одно такое слово,
-которое Эллочке даже не могло присниться.
-Это было богатое слово: полиморфизм»
-
-Вариации на тему Эллочки Людоедки.
-</pre>
+<Pre>
+  «Мадмуазель Собак слыла культурной девушкой: в ее словаре было около ста<br/>
+  восьмидесяти слов. При этом ей было известно одно такое слово, которое Эллочке<br/>
+  даже не могло присниться. Это было богатое слово: полиморфизм» Вариации на<br/>
+  тему Эллочки Людоедки.<br/>
+</Pre>
 
 ## Полиморфизм
 
