--- a/content/book/2/2.1.mdx
+++ b/content/book/2/2.1.mdx
@@ -6,10 +6,11 @@ metaDescription: "2.1. Зачем читать чужие программы?"
 
 ### Прежде чем начать (Чего не могут компьютеры?)
 
-<pre>
-«Разруха сидит не в клозетах, а в головах»<br/>
-М.Булгаков «Собачье сердце».
-</pre>
+<Pre>
+  «Разруха сидит не в клозетах, а в головах»
+  <br />
+  М.Булгаков «Собачье сердце».
+</Pre>
 
 Тот, кто считает, что процесс программирования заключается во вводе
 в компьютер различных команд и выражений, написанных на языке программирования,
@@ -60,11 +61,13 @@ metaDescription: "2.1. Зачем читать чужие программы?"
 
 ### Чтение – вот лучшее учение
 
-<pre>
-«Не нужно читать много книг»<br/>
-Мао Дзе Дун. Речь 13 октября 1957 г.<br/>
-на Верховном государственном совещании
-</pre>
+<Pre>
+  «Не нужно читать много книг»
+  <br />
+  Мао Дзе Дун. Речь 13 октября 1957 г.
+  <br />
+  на Верховном государственном совещании
+</Pre>
 
 Мое глубокое убеждение, изучение программирования нужно начинать с
 чтения чужих программ. Риторический вопрос, зачем. Естественно, не для того,
