--- a/content/book/2/2.4.mdx
+++ b/content/book/2/2.4.mdx
@@ -266,6 +266,7 @@ if (A[i]<0) continue;         // пропуск отрицательных
             if (k==-1) k=i;                 // срабатывает защелка на первом положительном
 
 else  if (A[i]<A[k]) k=i;    // на втором и последующих - сравнение
+}
 ```
 
 ## Стандартные программные контексты циклов
@@ -466,12 +467,13 @@ return -1;}
 
 ## Свойства всеобщности и существования
 
-<pre>
-«Ваше кредо? Всегда».<br/>
-<br/>
-<b>Ильф и Петров. «Двенадцать стульев».</b><br/>
-Из высказываний О.Бендера
-</pre>
+<Pre>
+  «Ваше кредо? Всегда».
+  <br />
+  <b>Ильф и Петров. «Двенадцать стульев».</b>
+  <br />
+  Из высказываний О.Бендера
+</Pre>
 
 Проверка свойств «для всех» и «существует» довольно часто производится программами и заслуживает отдельного рассмотрения. В математической логике для этого существуют кванторы всеобщности (") и существования ($). На самом деле они просто являются сокращенным обозначением логических операций И (одновременности все) и ИЛИ (хотя бы одно) над результатами проверки какого-либо условия над всеми элементами множества.
 
