--- a/content/book/3/3.3.mdx
+++ b/content/book/3/3.3.mdx
@@ -4,15 +4,13 @@ metaTitle: "3.3. Структурное программирование"
 metaDescription: "3.3. Структурное программирование"
 ---
 
-<pre>
-«ГЛАВА I. СУТЬ ДЕДУКТИВНОГО МЕТОДА ХОЛМСА. <br/>
-
-Шерлок Холмс взял с камина пузырек и вынул<br/>
-
-из аккуратного сафьянового несессера…».<br/>
-<br/>
-<b>Артур Конан-Дойль. «Знак четырех».</b>
-</pre>
+<Pre>
+  «ГЛАВА I. СУТЬ ДЕДУКТИВНОГО МЕТОДА ХОЛМСА. <br />
+  Шерлок Холмс взял с камина пузырек и вынул<br />
+  из аккуратного сафьянового несессера…».
+  <br />
+  <b>Артур Конан-Дойль. «Знак четырех».</b>
+</Pre>
 
 ## От общего к частному
 
