--- a/content/book/3/3.4.mdx
+++ b/content/book/3/3.4.mdx
@@ -4,16 +4,16 @@ metaTitle: "3.4. Модульное программирование"
 metaDescription: "3.4. Модульное программирование"
 ---
 
-<pre>
-«Divide et impera<br/>
-(Разделяй и властвуй)»<br/>
-<br/>
-<b>
-Латинская формулировка принципа<br/>
-империалистической политики,<br/>
-возникшая уже в новое время.<br/>
-</b>
-</pre>
+<Pre>
+  «Divide et impera<br />
+  (Разделяй и властвуй)»
+  <br />
+  <b>
+    Латинская формулировка принципа
+    империалистической политики,
+    возникшая уже в новое время.
+  </b>
+</Pre>
 
 Модульное проектирование – наиболее очевидная вещь в технологии программирования. Тем более, что любая промышленная технология производства рано или поздно приходит к сборке сложных изделий из набора совместимых и взаимозаменяемых деталей. Никому не надо объяснять термин «интерфейс». Тем не менее, наиболее сложно соблюдать эту заповедь: разрабатывать модульные программы. Отчасти это происходит потому, что взаимодействие модулей в программе несколько отличается от взаимодействия между модулями в другой технической системе.
 
