--- a/content/book/3/3.5.mdx
+++ b/content/book/3/3.5.mdx
@@ -4,13 +4,12 @@ metaTitle: "3.5. Неправильное программирование: ис
 metaDescription: "3.5. Неправильное программирование: историческое, восходящее, грязное"
 ---
 
-<pre>
-«Марксизм – не догма,<br/>
-<br/>
-а руководство к действию».<br/>
-<br/>
-<b>В.И.Ленин</b>
-</pre>
+<Pre>
+  «Марксизм – не догма,<br />
+  а руководство к действию».<br />
+  <br />
+  <b>В.И.Ленин</b>
+</Pre>
 
 Технология структурного программирования является наиболее правильной с точки зрения управляемости, безошибочности и качества получаемого программного кода. Другие подходы, не будучи столь идеальными, тем не менее имеют право на существование хотя бы в качестве дополнений к основному методу. Назовем их «неправильным программированием». Открывает этот перечень «**историческое программирование**», подробно рассмотренное в 3.2. Исторический подход исходит не из логической структуры алгоритма, а из его развертки во времени: программа пишется в той же последовательности, что и выполняется (блок-схема).
 
