--- a/content/book/3/3.8.mdx
+++ b/content/book/3/3.8.mdx
@@ -138,13 +138,13 @@ metaDescription: "3.8. Прописные истины теории алгори
 
 ## Программы и их место в иерархии формальных систем
 
-<pre>
-«Некоторые вещи нам непонятны не потому,<br/> 
-что понятия наши слабы, а потому что они <br/> 
-не входят в круг наших понятий».<br/> 
-<br/>
-<b>Козьма Прутков</b>
-</pre>
+<Pre>
+  «Некоторые вещи нам непонятны не потому,<br />
+  что понятия наши слабы, а потому что они <br />
+  не входят в круг наших понятий».<br />
+  <br />
+  <b>Козьма Прутков</b>
+</Pre>
 
 Как мы видели, основное ограничение программ (на практике) и алгоритмов (в теории алгоритмов) состоит в самоприменимости: насколько возможны программы, анализирующие и производящие «программы вообще». На самом деле эта проблема не только теории алгоритмов и, как следствие, программ. Она касается ограниченности и замкнутости любой формальной системы: **никакая формальная система не может содержать полное описание самой себя**. Более точно это сформулировано в теоремах Гёделя о неполноте:
 
