--- a/content/book/4/4.6.mdx
+++ b/content/book/4/4.6.mdx
@@ -4,15 +4,15 @@ metaTitle: "4.6. Сортировка и поиск"
 metaDescription: "4.6. Сортировка и поиск"
 ---
 
-<pre>
-«Далее он расставил всех присутствующих<br/> 
-по этому кругу (строго как попало)».<br/>
-<br/>
-<b>
-  Льюис Кэрролл.<br/>
-  Алиса в стране чудес (Перевод Бориса Заходера)
-</b>
-</pre>
+<Pre>
+  «Далее он расставил всех присутствующих<br />
+  по этому кругу (строго как попало)».<br />
+  <br />
+  <b>
+    Льюис Кэрролл.<br />
+    Алиса в стране чудес (Перевод Бориса Заходера)
+  </b>
+</Pre>
 
 Раздел «Сортировка и поиск» важен по нескольким причинам. Во-первых, он касается свойств упорядоченных и неупорядоченных данных. Кроме того, нигде больше Вы не найдете такого разнообразия решений одной и той же задачи.
 
