--- a/content/book/5/5.3.mdx
+++ b/content/book/5/5.3.mdx
@@ -4,10 +4,11 @@ metaTitle: "5.3. Структурированный тип"
 metaDescription: "5.3. Структурированный тип"
 ---
 
-<pre>
-«Здесь вам не тут…»<br/>
-Из армейского фольклора
-</pre>
+<Pre>
+  «Здесь вам не тут…»
+  <br />
+  Из армейского фольклора
+</Pre>
 
 Структурированную переменную можно определить как прямую противоположность массива. Действительно, «массив – это множество переменных одного типа, имеющих общее имя, доступ к которым осуществляется по номеру (индексу)». Формально изменив некоторые свойства на противоположные, получим, что «**структура – это множество разнотипных переменных с общим именем, доступ к которым осуществляется по имени**». Структура требует описания всех ее элементов по отдельности (имена и типы), в то время как для массива оно является общим.
 
