--- a/content/book/5/5.4.mdx
+++ b/content/book/5/5.4.mdx
@@ -4,13 +4,13 @@ metaTitle: "5.4. Иерархия типов данных и функций"
 metaDescription: "5.4. Иерархия типов данных и функций"
 ---
 
-<pre>
-«На острове – дуб, на дубе – сундук, <br/>
-в сундуке – заяц, в зайце – утка, в утке – яйцо, <br/>
-в яйце – игла, а на ее конце – Кощеева смерть». <br/>
-
-Русская народная сказка.
-</pre>
+<Pre>
+  «На острове – дуб, на дубе – сундук, <br />
+  в сундуке – заяц, в зайце – утка, в утке – яйцо, <br />
+  в яйце – игла, а на ее конце – Кощеева смерть». 
+  <br />
+  Русская народная сказка.
+</Pre>
 
 Иерархический принцип построения системы состоит в том, что более сложные компоненты составляются из более простых, ранее определенных. До сих пор с иерархией в языках программирования мы сталкивались при вызове функций (см. 3.4). В соответствии с принципом модульного программирования, если при решении задачи отдельные ее части являются относительно независимыми подзадачами, то последние оформляются в виде модулей (функций) с последующим вызовом из главной функции.
 
