--- a/content/book/5/5.5.mdx
+++ b/content/book/5/5.5.mdx
@@ -8,16 +8,16 @@ metaDescription: "5.5. Типы данных и переменные"
 
 ## Контекстное определение типа данных в Си
 
-<pre>
-Кошка:  Здесь у меня столовая. <br/>
-Вся мебель в ней дубовая. <br/>
-Вот это стул - на нём сидят. <br/>
-Вот это стол - за ним едят. <br/>
-Свинья:  Вот это стол -  на нём сидят!.. <br/>
-Коза: Вот это стул -  его едят!.. <br/>
-<br/>
-<b>С.Я.Маршак. «Кошкин дом»</b>
-</pre>
+<Pre>
+  Кошка: Здесь у меня столовая. <br />
+  Вся мебель в ней дубовая. <br />
+  Вот это стул - на нём сидят. <br />
+  Вот это стол - за ним едят. <br />
+  Свинья: Вот это стол - на нём сидят!.. <br />
+  Коза: Вот это стул - его едят!.. <br />
+  <br />
+  <b>С.Я.Маршак. «Кошкин дом»</b>
+</Pre>
 
 Идея контекстного определения типа данных состоит в том, что определяемая переменная помещается в контекст (окружение) тех операций, с которыми она может быть использована. В более широком плане это восходит к способу определения предметов через действия, которые над ними можно произвести, т.е. «автомобиль – это то, на чем ездят». Поскольку речь идет об определении переменных производного типа данных, то операции, которые применимы к нему – это не арифметические и им подобные, а операции выделения составляющего типа данных. Если при классификации операций исходить из их функционального назначения, то для переменной каждого производного типа данных можно выделить операцию, при помощи которой можно добраться до составляющих ее компонент.
 
