--- a/content/book/5/5.6.mdx
+++ b/content/book/5/5.6.mdx
@@ -4,13 +4,13 @@ metaTitle: "5.6. Динамические переменные и массивы
 metaDescription: "5.6. Динамические переменные и массивы"
 ---
 
-<pre>
-«Кофе в постель могу себе позволить, <br/>
-но сначала нужно встать, одеться и сварить, <br/>
-а потом раздеться, лечь и и выпить» <br/>
-<br/>
-<b>М.Жванецкий</b>
-</pre>
+<Pre>
+  «Кофе в постель могу себе позволить, <br />
+  но сначала нужно встать, одеться и сварить, <br />
+  а потом раздеться, лечь и и выпить» <br />
+  <br />
+  <b>М.Жванецкий</b>
+</Pre>
 
 ## Статический и динамический
 
