--- a/content/book/6/6.1.mdx
+++ b/content/book/6/6.1.mdx
@@ -82,14 +82,13 @@ int insert(int vv, int k) {
 
 **Текстовая строка как последовательность**. По определению строка – последовательность символов, ограниченная символом с кодом 0 (конец строки), представляет собой структуру данных, а массив, в котором она находится, является переменной.
 
-<pre>
-Стек<br/><br/>
-«Хороший Сагиб у Сами и умный,<br/>
-
-Только больно дерется стеком».<br/>
-<br/>
-Н.С.Тихонов. Сами.<br/>
-</pre>
+<Pre>
+  Стек<br />
+  «Хороший Сагиб у Сами и умный,<br />
+  Только больно дерется стеком».<br />
+  <br />
+  Н.С.Тихонов. Сами.
+</Pre>
 
 Операции вставки и извлечения элементов из обычной последовательности являются адресными – они используют логический (порядковый) номер элемента. Если ограничить возможности изменения последовательности только ее концами, получим структуры данных, называемые **стеком** и **очередью**.
 
@@ -133,10 +132,11 @@ int get(int k) {
 
 Единственным отличием аппаратного стека от рассмотренной модели является его расположение буквально «вверх дном», то есть его заполнение от старших адресов к младшим, первоначально указатель стека ссылается на «верхнюю часть» выделенной области памяти. Исторические обстоятельства таковы: в простейших вариантах распределения памяти в программе сегменты команд, статических данных размещались, начиная «от начала» памяти, а над ними «рос вверх» сегмент динамической памяти, поэтому стек приходилось размещать, начиная с другого конца, т.е. «вверх дном».
 
-<pre>
-Загадка для программистов: «Кто над нами вверх ногами».<br/>   
-Варианты отгадок: а). муха б). стек.
-</pre>
+<Pre>
+  Загадка для программистов: «Кто над нами вверх ногами».
+  <br />
+  Варианты отгадок: а). муха б). стек.
+</Pre>
 
 **Использование стека при вызове функции.** Поскольку вызов функций выполняется согласно принципа вложенности, все, что касается текущего состояния (контекста) функции можно разместить в стеке. Функция и стек взаимодействуют при вызове следующим образом:
 
