--- a/content/book/6/6.2.mdx
+++ b/content/book/6/6.2.mdx
@@ -4,11 +4,11 @@ metaTitle: "6.2. Массивы указателей"
 metaDescription: "6.2. Массивы указателей"
 ---
 
-<pre>
-«Не в совокупности ищи единства, но в единообразии разделения».<br/>
-<br/>
-<b>Козьма Прутков</b>.
-</pre>
+<Pre>
+  «Не в совокупности ищи единства, но в единообразии разделения».<br />
+  <br />
+  <b>Козьма Прутков</b>.
+</Pre>
 
 ## Массив указателей как тип данных и как структура данных
 
@@ -263,13 +263,12 @@ double sum(double ** p, int n, int m) {
 
 void main() {
   int n1, m1;
-
   double ** pp = load("62-03.txt", n1, m1);
 
   if (pp != NULL) {
-
-  printf("sum(%d,%d)=%2.0lf\n", n1, m1, sum(pp, n1, m1));
-  destroy(pp, n1);
+    printf("sum(%d,%d)=%2.0lf\n", n1, m1, sum(pp, n1, m1));
+    destroy(pp, n1);
+  }
 }
 ```
 
