--- a/content/book/6/6.3.mdx
+++ b/content/book/6/6.3.mdx
@@ -4,10 +4,11 @@ metaTitle: "6.3. Линейные списки"
 metaDescription: "6.3. Линейные списки"
 ---
 
-<pre>
-«Щас по списку и пойдем...»<br/>
-М.Жванецкий «Ставь птицу».
-</pre>
+<Pre>
+  «Щас по списку и пойдем...»
+  <br />
+  М.Жванецкий «Ставь птицу».
+</Pre>
 
 Реальное многообразие структур данных базируется всего на двух основных способах получения адреса хранимого элемента: вычисление (массив) и хранение (указатель). До сих пор основной компонентой структуры данных являлся массив (обычный массив, массив указателей). Если же попытаться построить структуру данных, исходя только из указателей, то получается цепочка (последовательность) элементов, содержащих указатели друг на друга. В простейшем случае она может быть линейной (список), в более сложных случаях – ветвящейся (деревья, графы). Итак, список – линейная последовательность элементов, каждый из которых содержит указатели (ссылается) на своих соседей.
 
@@ -472,12 +473,13 @@ int         Out(list *ph[]){                            // извлечение 
 
 ## Двусвязный циклический список
 
-<pre>
-Любовь - кольцо, а у кольца<br/>
-Начала нет и нет конца!<br/>
-
-Песня из к/ф «Женщины»
-</pre>
+<Pre>
+  Любовь - кольцо, а у кольца
+  <br />
+  Начала нет и нет конца!
+  <br />
+  Песня из к/ф «Женщины»
+</Pre>
 
 Циклический список связывает крайние элементы списка между собой, образуя кольцевую структуру. На практике «замкнутость» списка является удобным технологическим решением, позволяющим исключить постоянные проверки на «первый» и «последний». Т.е. логически последовательность элементов для внешнего пользователя остается линейной. Особенности такого списка:
 
