--- a/content/book/7/7.1.mdx
+++ b/content/book/7/7.1.mdx
@@ -26,39 +26,34 @@ metaDescription: "7.1. Цикл, итерация, рекурсия"
 
 &nbsp;<Icon name="Smile"/>
 
-<pre>
-«У попа была собака, он ее любил. <br/>
+<Pre>
+  «У попа была собака, он ее любил. <br />
+  Она съела кусок мяса, он ее убил. <br />
+  Камнем придавил, и на камне написал: <br />
+  «У попа была собака...»» (Детская считалка) <br />
+  <br />
+</Pre>
 
-Она съела кусок мяса, он ее убил. <br/>
+<Pre>
+  Я хочу Вам написать, что я хочу Вам написать, что я хочу Вам написать ...{" "}
+  <br />
+  (из письма пациента психиатру) <br />
+  <br />
+</Pre>
 
-Камнем придавил, и на камне написал: <br/>
+<Pre>
+  «Я знаю, что ты знаешь, что я знаю» <br />
+  (кинокомедия Альберто Сорди, Италия, 1982). <br />
+  <br />
+</Pre>
 
-«У попа была собака...»» (Детская считалка) <br/>
-<br/>
-</pre>
-
-<pre>
-Я хочу Вам написать, что я хочу Вам написать, что я хочу Вам написать ... <br/>
-
-(из письма пациента психиатру) <br/>
-<br/>
-</pre>
-
-<pre>
-«Я знаю, что ты знаешь, что я знаю» <br/> 
-(кинокомедия Альберто Сорди, Италия, 1982). <br/>
- <br/>
-</pre>
-
-<pre>
-«Я оглянулся посмотреть,<br/>
-
-не оглянулась ли она,<br/>
-
-чтоб посмотреть, не оглянулся ли я...»<br/> 
-
-(Максим .Леонидов, «Девочка-видение», песня).<br/>
-</pre>
+<Pre>
+  «Я оглянулся посмотреть,<br />
+  не оглянулась ли она,<br />
+  чтоб посмотреть, не оглянулся ли я...»
+  <br />
+  (Максим .Леонидов, «Девочка-видение», песня).
+</Pre>
 
 В тамбуре, пуская дым в окошко, Монахов на некоторое время обрел пространство: мусорный ящик, огнетушитель, декларация какая-то под стеклом, дверь в туалет, плевок – все на месте. Давно пора было закурить… подчеркнуто выпустил дым – отлегло. Что это все на него находит? Благожелательно приласкал взглядом огнетушитель: на месте, друг! Не действуешь?.. И то, что на огнетушителе была картинка, на которой человек, успев переодеться в комбинезон, правильно держал в руках точно такой же огнетушитель, на котором, в свою очередь, была картинка, на которой… это, с детства запавшее представление, тут же тысячу раз проигранное в мозгу, не было почему-то ему противно, наоборот: усмехнулся себе ласково, будто подмигнул прошлому… (**Андрей Битов. “Вкус”**).
 
