--- a/content/book/8/8.5.mdx
+++ b/content/book/8/8.5.mdx
@@ -4,12 +4,12 @@ metaTitle: "8.5. Двоичное дерево"
 metaDescription: "8.5. Двоичное дерево"
 ---
 
-<pre>
-«Идет направо - песнь заводит, <br/>
-налево – сказку говорит»<br/>
-<br/>
-А.С. Пушкин «Лукоморье»
-</pre>
+<Pre>
+  «Идет направо - песнь заводит, <br />
+  налево – сказку говорит»<br />
+  <br />
+  А.С. Пушкин «Лукоморье»
+</Pre>
 
 ## Упорядочение справа налево
 
