--- a/content/tasks/performance.mdx
+++ b/content/tasks/performance.mdx
@@ -4,13 +4,17 @@ metaDescription: "Оценка производительности програ
 metaTitle: "Оценка производительности программ"
 ---
 
-<pre>
-«Наука начинается с тех пор,<br/>
-как начинают измерять.<br/>
-Точная наука немыслима без меры»<br/>
-<br/>
-<b>Д.И.Менделеев</b><br/>
-</pre>
+<Pre>
+  «Наука начинается с тех пор,
+  <br />
+  как начинают измерять.
+  <br />
+  Точная наука немыслима без меры»
+  <br />
+  <br />
+  <b>Д.И.Менделеев</b>
+  <br />
+</Pre>
 
 ## Измерение производительности программ
 
