--- a/content/book/1/1.8.mdx
+++ b/content/book/1/1.8.mdx
@@ -4,13 +4,13 @@ metaTitle: "1.8. Если все сразу"
 metaDescription: "1.8. Если все сразу"
 ---
 
-<pre>
-«При трогании с места на ровном участке дороги<br/> 
-в безветренную погоду необходимо преодолеть лишь силу<br/> 
-сопротивления качению колес и силу инерции».<br/> 
-<br/>
-<b>С.Сабодахо. За рулем легкового автомобиля.</b> 
-</pre>
+<Pre>
+  «При трогании с места на ровном участке дороги<br />
+  в безветренную погоду необходимо преодолеть лишь силу<br />
+  сопротивления качению колес и силу инерции».<br />
+  <br />
+  <b>С.Сабодахо. За рулем легкового автомобиля.</b>
+</Pre>
 
 С чего начать практическое программирование на не вполне знакомом языке? Можно со справочника: идентификаторы, константы, служебные слова. Скучно. Можно с примера: написать бесполезную программу из одного оператора, выводящего «Hello, world», а затем долго ее обсуждать. Поступим по-другому. В следующей главе мы будем заниматься анализом и проектированием простых программ. Попробуем представить одну из них в «товарном виде» - в виде готового консольного приложения, и сказать все, или почти все, о ее составных частях.
 
