--- a/content/book/4/4.1.mdx
+++ b/content/book/4/4.1.mdx
@@ -4,16 +4,11 @@ metaTitle: "4.1. Трудоемкость программ"
 metaDescription: "4.1. Трудоемкость программ"
 ---
 
-<pre>
-  <p
-    className="wrap"
-    children={
-      "«Для решения любой сколь угодно простой задачи можно написать программу, которая будет работать сколь угодно медленно»."
-    }
-  />
+<Pre wrap>
+  «Для решения любой сколь угодно простой задачи можно написать программу, которая будет работать сколь угодно медленно».
   <br />
   <b>Афоризм, рожденный из практики приема курсовых работ.</b>
-</pre>
+</Pre>
 
 Скорость выполнения программы (или производительность) зависят от многих факторов: языка программирования, способа реализации транслятора (компилятор, интерпретатор), производительности процессора. Поэтому заранее оценить производительность еще не написанной программы сложно. Наша задача скромнее. Для уже разработанного алгоритма и написанной программы оценить перспективы ее использования с различными объемами данных. Для этого и вводится понятие трудоемкости.
 
