feat: text error

--- a/content/book/5/5.4.md
+++ b/content/book/5/5.4.md
@@ -368,7 +368,7 @@ case 'o':            printf("\nsort mode (0-by name, 1-by date, 2-by count(np)):
 
 - изменение (редактирование) записи;
 
-- вычисление с проверкой и использованием всех pfgbctq по заданному условию и формуле (например, общая сумма на всех счетах).
+- вычисление с проверкой и использованием всех записей по заданному условию и формуле (например, общая сумма на всех счетах).
 
 Перечень полей структурированной переменной:
 
