fix: specify language in code blocks

--- a/content/book/7/7.3.md
+++ b/content/book/7/7.3.md
@@ -392,7 +392,7 @@ void main() {
 
 Поиск выхода в лабиринте. С точки зрения математики лабиринт представляет собой граф, а алгоритм поиска выхода из него - производит поиск пути, соединяющего заданные вершины. Чтобы более наглядно продемонстрировать особенности рекурсивного программирования, будем использовать более «образное» представление лабиринта в виде двумерного символьного массива.
 
-```
+```text
 xxxxxxxxxxxxxxxxxx      xxxxxxxxxxxxxxxxxx
 x x              x      x x              x
 x x xxxxxxxxxxx  x      x x xxxxxxxxxxx  x
@@ -458,7 +458,7 @@ int step(int y, int x) {
 
 - сама постановка задачи исключает «зацикливание» луча, однако он может отразиться от уже сориентированного зеркала с обратной стороны, при этом уже установленная ориентация зеркала не меняется.
 
-```
+```text
 xxxxIxxxxxxxxxxxxxxx    xxxx.xxxxxxxxxxxxxxx
 x                  x    x   .              x
 x   *     *   *    x    x   \.....\   *    x
